Fix todo display bug, added appropriate overflow
The todo display was not showing up after adding a project after
deleting them all. The description and title of a todo element now
overflow and can be scrolled.

--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,10 @@ body {
   color: rgb(38, 17, 79);
 }
 
+.todo-title, .description  {
+  overflow: scroll;
+}
+
 .editing, .being-renamed {
   border: 1px solid rgb(0, 138, 169);
   border-radius: 3px;
